Fix appbar alignment issues

--- a/src/components/Navigation/theme.scss
+++ b/src/components/Navigation/theme.scss
@@ -2,6 +2,9 @@
 
 .appBar {
   background-color: $color-primary;
+  display: flex;
+  justify-content: space-around;
+  height: auto;
 
   img {
     width: 120px;
@@ -10,6 +13,8 @@
 }
 
 .horizontal {
-  flex-grow: 1;
-  text-align: right;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  text-align: center;
 }
