--- a/theme/_theme.scss
+++ b/theme/_theme.scss
@@ -8,3 +8,6 @@ $color-background: #E4E4E4;
 
 $color-primary: #BF6900;
 $button-neutral-color-contrast: $color-text-contrast;
+
+$appbar-h-padding: 0;
+$button-squared-min-width: 0;
